@@ -1,3 +1,12 @@
+[B][COLOR red]Update - v4.3.9 - Feb. 17, 2021[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Added BASE32 to HEX conversion for RD cache checking
+    of magnets with BASE32 encoded hash. AD and PM do
+    this conversion.[/I]
+[COLOR yellow]--[/COLOR][I] With the new TORRENTTM scraper added to FenomScrapers
+    please clear provider cache.  The cache holds the list of
+    pack capable scrapers and requires a fresh fetch of the
+    updated list.[/I]
+
 [B][COLOR red]Update - v4.3.8 - Feb. 14, 2021[/COLOR][/B]
 [COLOR yellow]--[/COLOR][I] Fixed issue with RD cache check where scrapers may return
     invalid magnets less than 40 characters in hash length.
